@@ -6,5 +6,8 @@
 <http://example.org/a-subject>
 	<http://example.org/a-predicate> <http://example.org/a-object> .
 
+<http://example.org/special-!#$%&'()*+,-./;=?@_~-chars>
+	<http://example.org/p> <http://example.org/o> .
+
 <http://www.w3.org/1999/02/22-rdf-syntax-ns#nil>
 	<http://www.w3.org/2000/01/rdf-schema#label> "nil" .
