@@ -13,10 +13,11 @@ serd (1.1.1) unstable; urgency=medium
   * Simplify statement flags
   * Simplify writer style options and write UTF-8 by default
   * Strictly parse percent-encoding in file URIs
+  * Support writing all escapes in Turtle and TriG prefixed names
   * Use a fixed-size reader stack
   * Use char* for strings in public API
 
- -- David Robillard <d@drobilla.net>  Fri, 07 Jun 2024 02:32:48 +0000
+ -- David Robillard <d@drobilla.net>  Tue, 30 Jan 2024 14:42:01 +0000
 
 serd (0.32.3) unstable; urgency=medium
 
